# codepilot

./: .gitignore  config.yaml  pyproject.toml  내용정리.docx
codepilot/: config.py  safety.py
codepilot/agent/: core.py  tools.py
codepilot/agent/tool_impls/: file_edit.py  file_list.py  file_read.py  file_search.py  file_write.py  run_command.py
codepilot/cli/: app.py  display.py
codepilot/cli/commands/: chat.py
codepilot/llm/: client.py  prompts.py
scripts/: runpod_setup.sh  serve_30b.sh  serve_80b.sh
